--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "sentry/sentry-laravel": "^2.6"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.1",
